# openvisa

./: Makefile.am  Makefile.in  bootstrap  configure.ac
examples/: Makefile.am  main.c
include/: Makefile.am  visa.h  visatype.h
src/: Makefile.am  common.h  data.c  gpib.c  serial.c  utils.c  viclose.c  vigetattr.c  viopen.c  viopendrm.c  viread.c  visetattr.c  vistatusdesc.c  viwrite.c
